# c2pa-spec-rs

./: Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
c2pa-spec/: CDDL_ISSUES.md  Cargo.toml  README.md
c2pa-spec-codegen/: Cargo.toml  README.md
c2pa-spec-codegen/src/: codegen.rs  main.rs
c2pa_spec/: all.html  enum.ActionChoice.html  enum.ActionReason.html  enum.AlternativeContentRepresentation.html  enum.CredentialType.html  enum.DepthMeasChoice.html  enum.FontFormatChoice.html  enum.FontStyle.html  enum.FontWeightClass.html  enum.FormatChoice.html  enum.HumanOversightEnum.html  enum.MaxTstrLength.html  enum.MimeChoice.html  enum.RangeChoice.html  enum.RelationChoice.html  enum.ReviewCode.html  enum.RoleChoice.html  enum.ShapeChoice.html  enum.SourceType.html  enum.StatusCode.html  enum.TimeMap.html  enum.TrainingMiningChoice.html  enum.TypeChoice.html  enum.UnitChoice.html  enum.Value.html  index.html  sidebar-items.js  struct.ActionCommonMapV2.html  struct.ActionItemMapV2.html  struct.ActionItemsMap.html  struct.ActionTemplateMapV2.html  struct.ActionsMap.html  struct.ActionsMapV2.html  struct.AiModelDisclosureMap.html  struct.AraReferenceBlockMap.html  struct.AraReferenceUriMap.html  struct.AssertionMetadataMap.html  struct.AssetRefMap.html  struct.AssetTypeMap.html  struct.AssetTypes.html  (+114 more)
c2pa_spec_codegen/: all.html  constant.EXCLUDED_CDDLS.html  constant.SPEC_INDEX_URL.html  fn.build_master_cddl.html  fn.collect_patch_names.html  fn.default_spec_dir.html  fn.emit_generated_rs.html  fn.emit_valid_metadata_fields.html  (+16 more)
(+383 files in other folders)
