[package]
name = "c2pa-spec-codegen"
description = "Regenerates the committed Rust sources in c2pa-spec from the upstream CDDL/YAML/ABNF schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cddl = "0.10.5"
clap = { version = "4.6.1", features = ["derive"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
